--- a/src/pages/StartPage/StartPage.scss
+++ b/src/pages/StartPage/StartPage.scss
@@ -31,6 +31,8 @@
     width: 180px;
     height: 180px;
     pointer-events: none;
+    padding: 10px;
+    border-radius: 20px;
   }
   &-motion {
     width: 350px;
