--- a/src/pages/ProjectPage/ProjectPage.scss
+++ b/src/pages/ProjectPage/ProjectPage.scss
@@ -1,8 +1,9 @@
 .page {
   &__content {
-    padding: 80px 200px 0;
+    padding: 80px 300px 0;
     display: flex;
     justify-content: space-between;
+    font-size: 25px;
   }
   &__link {
     display: flex;
@@ -14,6 +15,8 @@
       text-decoration: none;
     }
     &-img {
+      height: 500px;
+
       border-radius: 11px;
     }
   }
@@ -22,8 +25,8 @@
     position: relative;
     &-static, &-motion {
       position: absolute;
-      height: 370px;
-      width: 370px;
+      width: auto;
+      height: 100%;
     }
     &-motion {
       animation: logo-spin infinite 20s linear;
